# kechuan-cutter-win

./: .gitignore  README.md  index.html  package-lock.json  package.json  test_e2e.js  test_logic.js  test_rust.sh  test_save_config.cjs  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js
.github/workflows/: build-win.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen.py  icon.icns
src-tauri/src/: config.rs  cutter.rs  ffmpeg.rs  lib.rs  main.rs  vision.rs
src-tauri/tests/: archive_test.rs  integration_test.rs  pip_test.rs
