[package]
name = "cola-cutter"
version = "1.0.14"
description = "可乐裁切 - AI 智能裁剪长视频"
authors = ["cola"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cola_cutter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
regex = "1"
